# air-filters

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: rust.yml
examples/: angular_accel_ulog.rs  filter_imu_ulog.rs
examples/ulog/: mod.rs
src/: lib.rs  macros.rs
src/fir/: mod.rs  savitzky_golay.rs
src/iir/: biquad.rs  mod.rs  pt1.rs  pt2.rs  pt3.rs  testing.rs
src/nonlinear/: median.rs  mod.rs  slew.rs
src/util/: mod.rs  ring_buf.rs
